--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
